--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,5 +114,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./dist/@apps/docs/browser
           publish_branch: gh-pages
