--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,9 @@ jobs:
       - name: 🔑 dependencies
         run: npm ci --no-fund
 
+      - name: 🌈 build
+        run: npm run build
+
       - name: 🌈 build docs
         run: npm run docs
 
