--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
         run: npm ci --no-fund
 
       - name: 🌈 build
-        run: npm run build
+        run: npm run build && mv dist/@apps/docs/browser/index.csr.html dist/@apps/docs/browser/index.html
 
       - name: 🌈 build docs
         run: npm run docs
