--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,10 +108,13 @@ jobs:
         run: npm ci --no-fund
 
       - name: 🌈 build
-        run: npm run build && mv dist/@apps/docs/browser/index.csr.html dist/@apps/docs/browser/index.html
+        run: npm run build
 
       - name: 🌈 build docs
         run: npm run docs
+
+      - name: 🦋fix output
+        run: mv dist/@apps/docs/browser/index.csr.html dist/@apps/docs/browser/index.html
 
       - name: 📦 publish docs
         uses: peaceiris/actions-gh-pages@v3
