--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
       - name: 🌈 build
         run: npm run build
 
-#      - name: 🍓 test
-#        run: npm test
+      #      - name: 🍓 test
+      #        run: npm test
 
       - name: 🦋release common
         if: contains(github.event.head_commit.message, '(common)')
@@ -103,6 +103,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
       - name: 🔑 dependencies
         run: npm ci --no-fund
