feat(docs): release doc with xpd

--- a/angular.json
+++ b/angular.json
@@ -360,6 +360,105 @@
           }
         }
       }
+    },
+    "@apps/xpd": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "inlineTemplate": true,
+          "inlineStyle": true
+        }
+      },
+      "root": "apps/xpd",
+      "sourceRoot": "apps/xpd/src",
+      "prefix": "xpd",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "apps/xpd/src/main.ts",
+            "tsConfig": "apps/xpd/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "apps/xpd/public"
+              }
+            ],
+            "styles": [
+              "apps/xpd/src/styles.css"
+            ]
+          },
+          "configurations": {
+            "github": {
+              "baseHref": "/xprng/",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "1MB",
+                  "maximumError": "2MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "8kB",
+                  "maximumError": "16kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "@apps/xpd:build:production"
+            },
+            "development": {
+              "buildTarget": "@apps/xpd:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular/build:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "apps/xpd/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "apps/xpd/public"
+              }
+            ],
+            "styles": [
+              "apps/xpd/src/styles.css"
+            ]
+          }
+        }
+      }
     }
   }
 }
