--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,12 +129,9 @@ jobs:
       - name: 🌈 build docs
         run: npm run docs
 
-      - name: 🦋fix output
-        run: mv dist/@apps/docs/browser/index.csr.html dist/@apps/docs/browser/index.html
-
       - name: 📦 publish docs
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./dist/@apps/docs/browser
+          publish_dir: ./dist/@apps/xpd/browser
           publish_branch: gh-pages
