--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@compodoc/compodoc": "^1.1.26",
+    "@shikijs/twoslash": "^3.11.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
