--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "marked-gfm-heading-id": "^4.1.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "twoandhalfslash": "^0.0.2"
   },
   "devDependencies": {
     "@angular/build": "^20.1.5",
