fix(code): remove unused dependecy

--- a/xprng/code/package.json
+++ b/xprng/code/package.json
@@ -6,8 +6,7 @@
     "@angular/core": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@xprng/vendor": "*",
-    "shiki": "^3.9.2",
-    "twoandhalfslash": "^0.1.1"
+    "shiki": "^3.9.2"
   },
   "devDependencies": {
     "semantic-release": "^24.2.7"
