--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "marked-gfm-heading-id": "^4.1.2",
+    "thememirror": "^2.0.1",
     "tslib": "^2.3.0",
     "twoandhalfslash": "^0.1.1"
   },
@@ -42,6 +43,13 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@codemirror/autocomplete": "^6.18.7",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.2",
     "@compodoc/compodoc": "^1.1.26",
     "@shikijs/twoslash": "^3.11.0",
     "@tailwindcss/postcss": "^4.1.11",
