--- a/tsconfig.json
+++ b/tsconfig.json
@@ -113,6 +113,12 @@
     },
     {
       "path": "./xprng/query/tsconfig.spec.json"
+    },
+    {
+      "path": "./demo/tsconfig.app.json"
+    },
+    {
+      "path": "./demo/tsconfig.spec.json"
     }
   ]
 }
