--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "front-matter": "^4.0.2",
+    "github-slugger": "^2.0.0",
     "marked-gfm-heading-id": "^4.1.2",
     "marked-shiki": "^1.2.1",
     "thememirror": "^2.0.1",
