--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,5 +122,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./dist/@apps/xpd/browser
+          publish_dir: ./dist/demo/browser
           publish_branch: gh-pages
