--- a/angular.json
+++ b/angular.json
@@ -181,6 +181,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "baseHref": "/xprng/",
             "allowedCommonJsDependencies": [
               "front-matter"
             ],
